--- a/generate/config.json
+++ b/generate/config.json
@@ -3,6 +3,7 @@
     {
       "name": "首页模板",
       "selected": true,
+      "covered": false,
       "templateFile": "index.art",
       "targetPath": "src/views/modules/<%=moduleName%>/<%=table.tableCameName.replace(moduleName,'').charAt(0).toLowerCase()+table.tableCameName.replace(moduleName,'').slice(1)%>",
       "targetFileName": "index.vue"
@@ -10,6 +11,7 @@
     {
       "name": "接口模板",
       "selected": true,
+      "covered": false,
       "templateFile": "service.art",
       "targetPath": "src/api/<%=moduleName%>",
       "targetFileName": "<%=moduleName%>.<%=table.tableCameName.replace(moduleName,'').charAt(0).toLowerCase()+table.tableCameName.replace(moduleName,'').slice(1)%>.service.js"
@@ -17,6 +19,7 @@
     {
       "name": "添加模板",
       "selected": true,
+      "covered": false,
       "templateFile": "add.art",
       "targetPath": "src/views/modules/<%=moduleName%>/<%=table.tableCameName.replace(moduleName,'').charAt(0).toLowerCase()+table.tableCameName.replace(moduleName,'').slice(1)%>",
       "targetFileName": "add.vue"
@@ -24,6 +27,7 @@
     {
       "name": "修改模板",
       "selected": true,
+      "covered": false,
       "templateFile": "edit.art",
       "targetPath": "src/views/modules/<%=moduleName%>/<%=table.tableCameName.replace(moduleName,'').charAt(0).toLowerCase()+table.tableCameName.replace(moduleName,'').slice(1)%>",
       "targetFileName": "edit.vue"
@@ -31,6 +35,7 @@
     {
       "name": "详情模板",
       "selected": true,
+      "covered": false,
       "templateFile": "details.art",
       "targetPath": "src/views/modules/<%=moduleName%>/<%=table.tableCameName.replace(moduleName,'').charAt(0).toLowerCase()+table.tableCameName.replace(moduleName,'').slice(1)%>",
       "targetFileName": "details.vue"
@@ -38,6 +43,7 @@
     {
       "name": "表单组件",
       "selected": true,
+      "covered": true,
       "templateFile": "form.art",
       "targetPath": "src/views/modules/<%=moduleName%>/<%=table.tableCameName.replace(moduleName,'').charAt(0).toLowerCase()+table.tableCameName.replace(moduleName,'').slice(1)%>/components",
       "targetFileName": "form.vue"
@@ -45,6 +51,7 @@
     {
       "name": "搜索组件",
       "selected": true,
+      "covered": true,
       "templateFile": "search.art",
       "targetPath": "src/views/modules/<%=moduleName%>/<%=table.tableCameName.replace(moduleName,'').charAt(0).toLowerCase()+table.tableCameName.replace(moduleName,'').slice(1)%>/components",
       "targetFileName": "search.vue"
