--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "fuse.js": "3.4.4",
+    "screenfull": "4.2.0",
+    "echarts": "4.2.1",
+    "vue-count-to": "1.0.13"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
