--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
   },
   "dependencies": {
     "axios": "0.18.1",
+    "echarts": "4.2.1",
     "element-ui": "2.13.0",
+    "fuse.js": "3.4.4",
+    "html2canvas": "^1.0.0-rc.7",
     "js-cookie": "2.2.0",
+    "jspdf": "^2.1.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
-    "vue": "2.6.10",
-    "vue-router": "3.0.6",
-    "vuex": "3.1.0",
-    "fuse.js": "3.4.4",
     "screenfull": "4.2.0",
-    "echarts": "4.2.1",
-    "vue-count-to": "1.0.13"
+    "vue": "2.6.10",
+    "vue-count-to": "1.0.13",
+    "vue-router": "3.0.6",
+    "vuex": "3.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
