--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "screenfull": "4.2.0",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
+    "vue-cropper": "^0.5.5",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
