--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "0.18.1",
+    "core-js": "^2.6.12",
     "echarts": "4.2.1",
     "element-ui": "2.13.0",
     "fuse.js": "3.4.4",
